Page création de perso avec caractéristiques

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <!--
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+    -->
     <title>Heroes</title>
   </head>
 
@@ -22,6 +24,6 @@
 
     <h2>Un site dont vous êtes le héros</h2>
 
-    <button>Commencer</button>
+    <button class="primary-action">Commencer</button>
   </body>
 </html>
